src/assets/main.css
@import './base.css';

/* General -----------*/
#app {
  font-family: Helvetica, Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-align: center;
  text-transform: uppercase;  
}


/*Reused component containers -----------*/
body {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  background-color: #1e1e2f;
  color: #007bff;
}

.main-container {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  height: 80vh;
  margin: 0;
}

.menu-section{
  display: flex;
  height: 3em;
  width: 100%;
  justify-content: center;
}

footer {
  width: 100%;
  height: auto;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

/*Reused error message class -----------*/
.error-message {
  color: red;
  font-size: 1.2rem;
  font: bold;
  text-transform: none;
  margin: 0;
}


/*Reused button- and link classes ---------*/
.menu-link, .menu-btn {
  height: 100%; 
  color: black; 
  font-size: 0.8rem; 
  text-transform: uppercase;
  letter-spacing: 0.1em; 
  transition: background-color 0.3s box-shadow 0.3s;
  display: flex; 
  justify-content: center; 
  align-items: center; 
  text-decoration: none;
  cursor: pointer;
}

.create-link, .create-btn {
  background-color: #ff8c00;
  width: 60%
}

.create-link:hover, .create-btn:hover {
  background-color: #d97800;
  box-shadow: 0 0 10px rgba(255, 140, 0, 0.7); /*Adds glow effect*/
  color: white;
}

.join-link, .join-btn {
  background-color: #32cd32;
  width: 35%
}

.join-btn:hover, .join-link:hover {
  background-color: #28a428;
  box-shadow: 0 0 10px rgba(50, 205, 50, 0.7); /*Adds glow effect*/
  color: white;
}

.join-link--disabled {
  background-color: gray;
  pointer-events: none;
}

.back-btn {
  background-color: #007bff;
  justify-content: flex-start;
  width: 13em;
  height: 2em;
  display: grid;
  align-items: center;
  color: white;
  text-transform: uppercase;
  cursor: pointer;
  transition: background-color 0.3s, box-shadow 0.3s;
  margin: 0 0 0 20px;
}

.back-btn:hover {
  background-color:#2a2a45;
  box-shadow: 0 0 10px rgba(46, 46, 69, 0.8);
}

.back-btn-game {
  position:relative;
  margin: auto;
  bottom: 4px;
  left: 0px;
}

.lang-switcher {
  color:white;
  display: flex;
  justify-content: space-between;
  padding: 1em;
  padding-bottom: 0%;
  align-items: center;
  gap: 1em;
  font-size: 1em;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  margin: 0 20px 4px 0;
}

.lang-btn {
  height: 3em;
  width: 5em;
  cursor: pointer;
  border-radius: 1em;
  background-size: cover;
  background-position: center;
}

.button-sv {
  background-image: url("../assets/swedish-flag.png");
}

.button-en {
  background-image: url("../assets/uk-flag.png");
}


/* StartView -----------*/

header {
  background-color:#1e1e2f; /*Emil: this class is unnecessary, 
                                but we still might want to keep it, maybe ask Mikael.*/
  width: 100%;
}

.logo {
  letter-spacing: 0.25em;
  font-size: 2.5rem;
  color: #007bff;
  width:100%;
  padding:5px;
  margin-top: 1.5em;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 10px;
}

.logo-image {
  height: 70px;
  min-width: 70px; 
  display: flex;
  align-items: center;
  justify-content: center;
}
.sub-title{  
  font: bold size 1.5em;
}
.start-menu {
  display: flex;
  flex-direction: column;
  gap: 2em;
  width: 26em;
  align-items: center;

}

.id-input {
  font-size: 1.2rem;
  width: 40%;
}

.id-input::placeholder {
  text-transform: uppercase;
  opacity: 0.75;
}

.content-separator {
  display: flex;
  align-items: center;
  height: 2em;
  letter-spacing: 0.15em;
  font-size: 1.5rem;
  color: white;
}




/*CREATEVIEW-----------*/

.game-id {
  margin-top: 5px;
}

.operator-section label, .questions-section label, .range-section label{
  font-size: 1.1em;
  font-weight: bold;
  color: #ff8c00;
  padding: 3px;
}

.radio-item {
  display: flex;
  align-items: center;
  gap: 5px;  
}

/*CREATEVIEW Smartphones (portrait) ----------- */
@media only screen 
and (max-width : 320px) {

  .form-grid {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    gap: 10px;
  }

  .operator-section,.questions-section,
  .range-section {
    padding: 5px;
    border-radius: 10px;
    height: auto;
    width: 100%;
    display: flex;
    flex-direction: column;
    background-color: #252537;
    box-shadow: 2px 8px 10px rgba(0.5, 0.5, 0.5, 0.5);
  }

  .radio-group label {
    font-size: 1em;
    font-weight: bold;
    color: #ff8c00;   
  }

  .radio-group {
    display: flex;
    flex-direction: column;
    gap: 0px;
    width: auto;  
  }
}

/*CREATEVIEW Smartphones (landscape) -----------Joakims telefon */
@media only screen 
and (min-width : 321px) {

  .form-grid {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    gap: 10px;
  }

  .operator-section,.questions-section,
  .range-section {
    padding: 5px;
    border-radius: 10px;
    height: auto;
    width: 100%;
    display: flex;
    flex-direction: column;
    background-color: #252537;
    box-shadow: 2px 8px 10px rgba(0.5, 0.5, 0.5, 0.5);
  }

  .radio-group label {
    font-size: 1em;
    font-weight: bold;
    color: #ff8c00; 
  }

  .radio-group {
    display: flex;
    flex-direction: column;

    width: auto;  
  }


}



/*CREATEVIEW Desktops and laptops ----------- */
@media only screen 
and (min-width : 700px) {

  .form-grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 40px;
    width:80%;
    padding: 5%;
    padding-bottom: 5%;

  }

  .operator-section,.questions-section,
  .range-section {
    border-radius: 10px;
    height: auto;
    width: 100%;
    display: flex;
    flex-direction: column;
    background-color: #252537;
    box-shadow: 2px 8px 10px rgba(0.5, 0.5, 0.5, 0.5);
  }

  .radio-group label {
    font-size: 1em;
    font-weight: bold;
    color: #ff8c00;  
  }

  .radio-group {
    display: flex;
    flex-direction: column;
    gap: 2px;
    width: auto;  
  }
}


/*LobbyView-----------*/

.card {
  border-radius: 5px;
  padding: 10px;
  box-shadow: 0px 4px 6px rgba(0.3, 0.1, 0.2, 0.4);
  background-color: #252537;
}

.game-id-lobby {
  font-size: 20pt;
  color:#007bff;
}

#domination-tutorial{
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 10px;
}

.lobby-menu {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width:80%;
  gap: 10%
}

/*gameVIEW-----------*/



.game-id-game {
  display: flex;
  align-items: center;
  padding-top: 0;
  padding-left: 20px;
  padding-right: 20px;
}

.player {
  display: flex;
  align-items: center;
  justify-content: center;
  flex: 1;
  text-align: center;
  padding: 10px;
  color: white;
}

.player1 {
  background-color: #32cd32; /* Player 1's color */
}

.player2 {
  background-color: #ff8c00; /* Player 2's color */
}

.node-area {

  flex-wrap: wrap;
  justify-content: center;
  gap: 1rem;
  width: 80%
}

.who-wins-p1 {
  font-size: 24px;
  color: #32cd32;
  animation: pulse 2s infinite;
  padding: 24px;
}

.who-wins-p2 {
  font-size: 24px;
  animation: pulse 2s infinite;
  color: #ff8c00;
  padding: 24px;
}

/*gameVIEW Smartphones (portrait) ----------- */
@media only screen 
and (max-width : 320px) {
  .node-grid {
    max-width: 400px;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(1em, 1fr));
    gap: 0.5em;
    text-align: center;
    margin:  auto;
  } 
  .nodeButton {
    height: 1em;
    width: 1em;
    border-radius: 50%;
    background-color: #007bff;
    text-align: center;
    margin: auto;
  }

  .banner {
    width: 100%;
    display: flex;
    justify-content: space-between;
    background-color: #007bff;
    padding: 0px;
    color: white;
  }
}


/*gameVIEW Smartphones (landscape) -----------Joakims telefon */
@media only screen 
and (min-width : 321px) {
  .node-grid {
    max-width: 300px;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(1em, 1fr));
    gap: 0.2em;
    text-align: center;
    margin:  auto;
  } 

  .nodeButton {
    height: 2em;
    width: 2em;
    border-radius: 50%;
    background-color: #007bff;
    text-align: center;
    margin: auto;
  }

  .banner {
    width: 100%;
    display: flex;
    justify-content: space-between;
    background-color: #007bff;
    padding: 0px;
    color: white;
  }
}


/*gameVIEW Desktops and laptops ----------- */
@media only screen 
and (min-width : 700px) {
  
  .node-grid {
    max-width: 450px;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(1em, 1fr));
    gap: 0.7em;
    text-align: center;
    margin:  auto;
  } 

  .nodeButton {
    height: 3em;
    width: 3em;
    border-radius: 50%;
    background-color: #007bff;
    text-align: center;
    margin: auto;
  }
  .banner {
    width: 70%;
    display: flex;
    justify-content: space-between;
    background-color: #007bff;
    padding: 0px;
    color: white;

  }

}


/*gameVIEW Large screens ----------- */
@media only screen 
and (min-width : 1824px) {

  .node-grid {
    max-width: 600px;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(1em, 1fr));
    gap: 0.7em;
    text-align: center;
    margin:  auto;
  } 
  .nodeButton {
    height: 4em;
    width: 4em;
    border-radius: 50%;
    background-color: #007bff;
    text-align: center;
    margin: auto;
  }
  .banner {
    width: 70%;
    display: flex;
    justify-content: space-between;
    background-color: #007bff;
    padding: 0px;
    color: white;

  }
}

@keyframes pulse {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.4);
  }
  100% {
    transform: scale(1);
  }
}

/*QuestionComponent-----------*/

.answer-btn-p1 {
  background-color: #32cd32;
  height: 2em;
  width: 10em;
  cursor: pointer;
  color:white;
}

.answer-btn-p1:hover {
  background-color: #9cca9cff;
}

.answer-btn-p2 {
  background-color:  #e67e00;
  height: 2em;
  width: 10em;
  cursor: pointer;
  color:white;
}

.answer-btn-p2:hover {
  background-color: #ffc379ff;
}

